# xorstr

./: .clang-format  CMakeLists.txt  readme.md
cmake/: xorstrConfig.cmake.in
include/: xorstr.hpp
include/fantasy/: xorstr.hpp
tests/: CMakeLists.txt  test.cpp
